--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.12.3",
-    "mongoose": "^4.0.2"
+    "pg": "^4.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^2.1.3"
   },
   "homepage": "https://github.com/Stephiev/REST_API_MongoDB_W3",
   "devDependencies": {
