--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "author": "stephievictoria@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "latest",
     "body-parser": "^1.12.4",
+    "eat": "^0.1.1",
     "express": "^4.12.3",
-    "mongoose": "^4.0.2"
+    "mongoose": "^4.0.2",
+    "passport": "^0.2.1",
+    "passport-http": "^0.2.2",
+    "uuid-js": "^0.7.5"
   },
   "homepage": "https://github.com/Stephiev/REST_API_MongoDB_W3",
   "devDependencies": {
