--- a/package.json
+++ b/package.json
@@ -12,20 +12,28 @@
   },
   "author": "stephievictoria@gmail.com",
   "license": "MIT",
+  "homepage": "https://github.com/Stephiev/REST_API_MongoDB_W3",
   "dependencies": {
-    "body-parser": "^1.12.4",
+    "body-parser": "^1.12.3",
     "express": "^4.12.3",
     "mongoose": "^4.0.2"
   },
-  "homepage": "https://github.com/Stephiev/REST_API_MongoDB_W3",
   "devDependencies": {
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-jscs": "^1.8.0",
     "grunt-simple-mocha": "^0.4.0",
-    "mocha": "^2.2.4"
+    "grunt-webpack": "^1.0.8",
+    "mocha": "^2.2.4",
+    "node-libs-browser": "^0.5.2",
+    "superagent": "^1.2.0",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   }
+
 }
