--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^4.0.2"
   },
   "devDependencies": {
+    "angular": "^1.4.0",
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
@@ -35,5 +36,4 @@
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   }
-
 }
