--- a/package.json
+++ b/package.json
@@ -19,18 +19,16 @@
     "mongoose": "^4.0.2"
   },
   "devDependencies": {
-    "angular": "^1.4.0",
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-jscs": "^1.8.0",
     "grunt-webpack": "^1.0.8",
-    "mocha": "^2.2.4",
+    "jsx-loader": "^0.13.2",
+    "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
+    "react": "^0.13.3",
     "superagent": "^1.2.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
