--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "REST_API_MongoDB",
   "version": "0.1.0",
-  "description": "Simpe REST api backed by MongoDB",
+  "description": "Simpe REST api backed by MongoDB, with some angular and crud tests",
   "main": "server.js",
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt run"
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "angular": "^1.4.0",
+    "angular-mocks": "^1.3.16",
     "chai": "^2.3.0",
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
@@ -28,9 +29,17 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-jscs": "^1.8.0",
+    "grunt-karma": "^0.11.0",
     "grunt-webpack": "^1.0.8",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.36",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
     "mocha": "^2.2.4",
     "node-libs-browser": "^0.5.2",
+    "phantomjs": "^1.9.17",
     "superagent": "^1.2.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
