--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "chai-http": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-concurrent": "^2.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-jscs": "^1.8.0",
     "grunt-karma": "^0.11.0",
+    "grunt-nodemon": "^0.4.0",
     "grunt-webpack": "^1.0.8",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.36",
